syling updates: button updated to fit text, background color added for table header, fixed gap between comp to match mockup & fixed gray back ground behind edit and delete btn

--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -33,7 +33,6 @@
   }
   &--input {
     height: 2.25rem;
-    min-width: 240px;
     max-height: 36px;
     @include mediaQ.tablet {
       height: 2.375rem;
@@ -62,6 +61,10 @@
   background-size: 1rem;
   background-repeat: no-repeat;
   padding: 1rem;
-  width: 100%;
   margin-bottom: paddingandmargins.$mobDEF;
+  @include mediaQ.tablet {
+    width: 100%;
+    max-width: 230px;
+    background-size: 1.75rem;
+  }
 }
